<resources>
    <string name="app_name">makharij al-huruf</string>
    <string name="Halqiyah">Halqiyah</string>
    <string name="Lahatiyah">Lahatiyah</string>
    <string name="Shajariyah">Shajariyah-Haafiyah</string>
    <string name="Tarfiyah">Tarfiyah</string>
    <string name="Niteeyah">Nit-eeyah</string>
    <string name="Lisaveyah">Lisaveyah</string>
    <string name="Ghunna">Ghunna</string>
    <string name="name"> Name           Khurram Qamar</string>
    <string name="Roll"> ROLL No        BCSF18M006</string>
    <string name="Repo">Click here for Repository</string>
    <string name="Practice"> Learning Makharij al-Huruf</string>
    <string name="Practise"> Practice</string>
    <string name="Exam"> Take Quiz</string>
    <string name="Emission">Click the Buttons Below for explanation</string>
</resources>
