<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Lahatiyah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lahatiyah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <Button
        android:id="@+id/Shajariyah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Shajariyah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.266" />

    <Button
        android:id="@+id/Tarfiyah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tarfiyah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.745" />

    <Button
        android:id="@+id/Niteeyah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Niteeyah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.745" />

    <Button
        android:id="@+id/Lisaveyah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lisaveyah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.871" />

    <Button
        android:id="@+id/Ghunna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ghunna"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.859" />

    <Button
        android:id="@+id/Halqiyah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Halqiyah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="61dp"
        android:layout_marginBottom="1dp"
        android:text="@string/Emission"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/Ghunna"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:srcCompat="@drawable/main"
        tools:layout_editor_absoluteX="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>